# asistencia

./: .editorconfig  .gitignore  CODEOWNERS  README.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.vue  error.ts  main.ts  ports.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/bindings/: Attendant.ts  AttendantChecks.ts  LimeSurveyExportItem.ts  RawAttendant.ts
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: CSVExportButton.vue  ErrorBoundary.vue  Greet.vue
